--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="form-box">
             <!-- Login Form -->
             <form id="loginForm">
-                <input type="email" id="loginEmail" placeholder="Email address or phone number" required>
+                <input type="text" id="loginEmail" placeholder="Email address or phone number" required>
                 <input type="password" id="loginPass" placeholder="Password" required>
                 <button type="submit" class="login-btn">Log In</button>
                 <a href="#">Forgotten password?</a>
