--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>It's quick and easy.</p>
                 <hr>
                 <input type="text" id="newName" placeholder="Full Name" required>
-                <input type="email" id="newEmail" placeholder="Email or Phone" required>
+                <input type="text" id="newEmail" placeholder="Email or Phone" required>
                 <input type="password" id="newPass" placeholder="New Password" required>
                 <button type="submit" class="signup-btn">Sign Up</button>
                 <p onclick="toggleForm()" style="cursor:pointer; color:#1877f2; margin-top:10px;">Already have an account?</p>
